# one-page-rpg

./: ARQUITECTURA DE ARCHIVOS JSON PARA EL MOTOR NARRATIVO.md  Archivos JSON Específicos para el Prólogo.md  Archivos JSON de configuracion juego y narrativa.md  Hoja de Personaje Minimalista.txt  INTEGRACIÓN CON LLM PARA NARRATIVA.md  INTERFAZ DE USUARIO (Una Sola Página).txt  SISTEMA DE AVENTURA GENERATIVA.txt  SISTEMA DE GENERACIÓN DE HISTORIA - Base y Motor Narrativo.md  SISTEMA DE GENERACIÓN DE TEXTOS Y EVENTOS.txt  promp_doc.txt  pyproject.toml  text_RPG_00.txt
docs/plans/: constitution.md  plan.md  spec.md  tasks.md
one-page-rpg/: CORRECCION_COMPLETA.md  DESIGNER_GUIDE.md  DESIGN_VS_IMPLEMENTATION_GAP_ANALYSIS.md  ESTADO_REAL_VERIFICADO.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE_2D6_REPUTATION_NPCS.md  INTEGRATION_COMPLETE.md  INTEGRATION_COMPLETE_SUMMARY.md  LLM_SYSTEMS_IMPLEMENTED.md  PLAN_VERIFICATION.md  PLAYER_GUIDE.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  PROYECTO_STATUS_ACTUAL.md  README.md  ROADMAP_55_PERCENT.md  SESSION_SUMMARY.md  TASK_VERIFICATION.md  TECHNICAL_GUIDE.md  TODO.md  VERIFICACION_ERRORES.md  index.html  package-lock.json  package.json  vitest.config.ts
one-page-rpg/docs/: PROMPTS_CONFIGURATION.md
one-page-rpg/public/: preview.html  test-rpgui.html
one-page-rpg/public/audio/: README.md
one-page-rpg/public/config/: llm-prompts.json
one-page-rpg/src/: App.tsx  AppNew.tsx  index.css  main.tsx
one-page-rpg/src/components/: CombatView.tsx  (+16 more)
src/one_page_rpg/: __init__.py
stitch_rpg_game_interface/rpg_game_interface/: code.html
(+76 files in other folders)
