[project]
name = "one-page-rpg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Milton Diaz", email = "mdvoid@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
one-page-rpg = "one_page_rpg:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
